--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "hoek": "^5.0.4",
+    "url-parse": "^1.4.3",
     "vue": "^2.5.11",
     "vue-dragscroll": "^1.5.0"
   },
